# mangadex_talker

./: README.md  requirements-dev.txt  setup.cfg
.github/workflows/: release.yaml
mangadex/: mangadex.py
