[metadata]
name = comictagger_mangadex_talker
version = 0.0.1
description = A MangaDex API talker for ComicTagger a cross-platform GUI/CLI app for writing metadata to comic archives
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mizaki/comictagger-mangadex-talker
author = ComicTagger team
author_email = comictagger@gmail.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: MacOS X
    Environment :: Plugins
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: Qt
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Graphics
    Topic :: Other/Nonlisted Topic
    Topic :: Utilities
keywords =
    comictagger
    mangadex
    comics
    comic
    metadata
    tagging
    tagger

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude = tests; testing
src = mangadex

[options.entry_points]
comictagger.talker =
    mangadex = mangadex.mangadex:MangaDexTalker

[options.extras_require]
dev =
    black>=22
    flake8==4.*
    flake8-black
    flake8-encodings
    flake8-isort
    invoke
    tox
    isort>=5.10
    pytest==7.*
    setuptools>=42
    setuptools-scm[toml]>=3.4
    wheel

[tox:tox]
envlist = py3.9

[testenv]
deps = -requirements-dev.txt
commands =
    coverage erase
    coverage run -m pytest {posargs:tests}
    coverage report

[testenv:wheel]
description = Generate wheel and tar.gz
labels =
    release
    build
skip_install = true
deps =
    build
commands_pre =
    -python -c 'import shutil,pathlib; \
    shutil.rmtree("./build/", ignore_errors=True); \
    shutil.rmtree("./dist/", ignore_errors=True)'
commands =
    python -m build
